--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!doctype html>
 <html lang="en" data-framework="es6">
 <head>
   <meta charset="utf-8">
+  <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
+
   <title>Kata Movies App</title>
   <link rel="icon" href="./favicon.svg" />
 </head>
